[package]
name = "hexarch"
version = "0.1.0"
authors = ["Jan Algermissen <algermissen@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
#warp = "0.3.0"
#hyper = "0.14.2"
#hyper-rustls = "0.22.1"
#http = "0.2.4"
thiserror = "1.0"
#memdb = "1.0.0"
#serde = {version = "1.0", features = ["derive"]}
#serde_json = {version = "1.0"}
async-trait = "0.1.50"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
#warp = "0.3.0"
#hyper = "0.14.2"
#hyper-rustls = "0.22.1"
#http = "0.2.4"
thiserror = "1.0"
#memdb = "1.0.0"
#serde = {version = "1.0", features = ["derive"]}
#serde_json = {version = "1.0"}
async-trait = "0.1.50"
